--- a/packages/mosaic/design-tokens/_variables.scss
+++ b/packages/mosaic/design-tokens/_variables.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Mon, 25 Jan 2021 13:26:32 GMT
+// Generated on Tue, 26 Jan 2021 09:13:50 GMT
 
 $light-color-primary-default: #338FCC;
 $light-color-second-default: #B3B3B3;
@@ -16,7 +16,7 @@ $light-color-foreground-border: #B3B3B3;
 $light-color-foreground-icon: #999999;
 $light-color-background-background: white;
 $light-color-background-background-disabled: #F0F0F0;
-$light-color-background-overlay-hovered: rgba(black, 0.05);
+$light-color-background-overlay-hover: rgba(black, 0.05);
 $light-color-background-overlay-active: rgba(black, 0.1);
 $light-color-background-overlay-disabled: rgba(white, 0.3);
 $light-color-states-focused-color: #338FCC;
@@ -37,7 +37,7 @@ $dark-color-foreground-border: #808080;
 $dark-color-foreground-icon: #999999;
 $dark-color-background-background: #333333;
 $dark-color-background-background-disabled: #666666;
-$dark-color-background-overlay-hovered: rgba(black, 0.05);
+$dark-color-background-overlay-hover: rgba(black, 0.05);
 $dark-color-background-overlay-active: rgba(black, 0.1);
 $dark-color-background-overlay-disabled: rgba(white, 0.2);
 $dark-color-states-focused-color: #57A4D7;
@@ -432,8 +432,20 @@ $form-field-hint-size-margin-top: 4px;
 $input-size-padding: 5px 16px;
 $input-size-width: 100%;
 $input-size-min-height: 30px;
-$link-light-color-states-hover-border: #206EA2;
-$link-dark-color-states-hover-border: #7FBAE1;
+$link-light-color-text: #338FCC;
+$link-light-color-state-hover-text: #206EA2;
+$link-light-color-state-focused-outline: #338FCC;
+$link-light-color-dashed-border-bottom: rgba(#338FCC, 0.5);
+$link-light-color-dashed-state-hover-border-bottom: rgba(#206EA2, 0.5);
+$link-light-color-underlined-border-bottom: rgba(#338FCC, 0.32);
+$link-light-color-underlined-state-hover-border-bottom: rgba(#206EA2, 0.32);
+$link-dark-color-text: #338FCC;
+$link-dark-color-state-hover-text: #7FBAE1;
+$link-dark-color-state-focused-outline: #57A4D7;
+$link-dark-color-dashed-border-bottom: rgba(#338FCC, 0.5);
+$link-dark-color-dashed-state-hover-border-bottom: rgba(#7FBAE1, 0.5);
+$link-dark-color-underlined-border-bottom: rgba(#338FCC, 0.32);
+$link-dark-color-underlined-state-hover-border-bottom: rgba(#7FBAE1, 0.32);
 $list-size-horizontal-padding: 15px;
 $list-size-icon-padding: 4px;
 $list-size-item-height: 28px;
@@ -552,42 +564,42 @@ $tabs-size-border-radius: 3px;
 $tags-light-color-primary-background: #D8EAF7;
 $tags-light-color-primary-border: #D8EAF7;
 $tags-light-color-primary-icon: mix(#57A4D7, rgba(black, 0.05));
-$tags-light-color-primary-states-hovered-icon: #206EA2;
+$tags-light-color-primary-states-hover-icon: #206EA2;
 $tags-light-color-primary-states-focused: #338FCC;
 $tags-light-color-primary-states-disabled-text: mix(#338FCC, transparent, 50%);
 $tags-light-color-primary-states-disabled-background: mix(#338FCC, transparent, 10%);
 $tags-light-color-second-background: #E6E6E6;
 $tags-light-color-second-border: #E6E6E6;
 $tags-light-color-second-icon: mix(#999999, rgba(black, 0.05));
-$tags-light-color-second-states-hovered-icon: #999999;
+$tags-light-color-second-states-hover-icon: #999999;
 $tags-light-color-second-states-focused: #338FCC;
 $tags-light-color-second-states-disabled-text: mix(#B3B3B3, transparent, 50%);
 $tags-light-color-second-states-disabled-background: mix(#B3B3B3, transparent, 10%);
 $tags-light-color-error-background: #FADEDA;
 $tags-light-color-error-border: #FADEDA;
 $tags-light-color-error-icon: mix(#E76E5C, rgba(black, 0.05));
-$tags-light-color-error-states-hovered-icon: #E04D36;
+$tags-light-color-error-states-hover-icon: #E04D36;
 $tags-light-color-error-states-focused: #E76E5C;
 $tags-light-color-error-states-disabled-text: mix(#E76E5C, transparent, 50%);
 $tags-light-color-error-states-disabled-background: mix(#E76E5C, transparent, 10%);
 $tags-dark-color-primary-background: #114E77;
 $tags-dark-color-primary-border: #114E77;
 $tags-dark-color-primary-icon: mix(#57A4D7, rgba(black, 0.05));
-$tags-dark-color-primary-states-hovered-icon: #338FCC;
+$tags-dark-color-primary-states-hover-icon: #338FCC;
 $tags-dark-color-primary-states-focused: #57A4D7;
 $tags-dark-color-primary-states-disabled-text: mix(#57A4D7, transparent, 50%);
 $tags-dark-color-primary-states-disabled-background: mix(#57A4D7, transparent, 10%);
 $tags-dark-color-second-background: #4D4D4D;
 $tags-dark-color-second-border: #4D4D4D;
 $tags-dark-color-second-icon: mix(#999999, rgba(black, 0.05));
-$tags-dark-color-second-states-hovered-icon: #E6E6E6;
+$tags-dark-color-second-states-hover-icon: #E6E6E6;
 $tags-dark-color-second-states-focused: #57A4D7;
 $tags-dark-color-second-states-disabled-text: mix(#999999, transparent, 50%);
 $tags-dark-color-second-states-disabled-background: mix(#999999, transparent, 10%);
 $tags-dark-color-error-background: #832112;
 $tags-dark-color-error-border: #832112;
 $tags-dark-color-error-icon: mix(#E76E5C, rgba(black, 0.05));
-$tags-dark-color-error-states-hovered-icon: #F4B7AE;
+$tags-dark-color-error-states-hover-icon: #F4B7AE;
 $tags-dark-color-error-states-focused: #E76E5C;
 $tags-dark-color-error-states-disabled-text: mix(#E76E5C, transparent, 50%);
 $tags-dark-color-error-states-disabled-background: mix(#E76E5C, transparent, 10%);
@@ -640,13 +652,13 @@ $vertical-navbar-light-color-background: #114E77;
 $vertical-navbar-light-color-text: white;
 $vertical-navbar-light-color-toggle-button: white;
 $vertical-navbar-light-color-states-active-background: lighten(#114E77, 5%);
-$vertical-navbar-light-color-states-hovered-background: lighten(#114E77, 5%);
+$vertical-navbar-light-color-states-hover-background: lighten(#114E77, 5%);
 $vertical-navbar-light-color-states-progress-background: lighten(#07314D, 15%);
 $vertical-navbar-dark-color-background: #114E77;
 $vertical-navbar-dark-color-text: white;
 $vertical-navbar-dark-color-toggle-button: white;
 $vertical-navbar-dark-color-states-active-background: lighten(#114E77, 5%);
-$vertical-navbar-dark-color-states-hovered-background: lighten(#114E77, 5%);
+$vertical-navbar-dark-color-states-hover-background: lighten(#114E77, 5%);
 $vertical-navbar-dark-color-states-progress-background: lighten(#07314D, 15%);
 $vertical-navbar-item-size-height: 64px;
 $vertical-navbar-item-size-margin: 1px 0;
