--- a/packages/mosaic/toggle/_toggle-theme.scss
+++ b/packages/mosaic/toggle/_toggle-theme.scss
@@ -28,7 +28,7 @@
 
         &:hover {
             & .mc-toggle__overlay {
-                background: map-get($background, overlay-hovered);
+                background: map-get($background, overlay-hover);
             }
         }
 
