--- a/packages/docs/src/app/components/navbar/_navbar-theme.scss
+++ b/packages/docs/src/app/components/navbar/_navbar-theme.scss
@@ -4,7 +4,7 @@
     $primary: map-get($theme, primary);
     $is-dark: map-get($theme, is-dark);
     $background-color: mc-color($background, background);
-    $hover:  mc-color($background, overlay-hovered);
+    $hover:  mc-color($background, overlay-hover);
     $selected-color: map-get(map-get($theme, states), selected-color);
     $text: mc-color($foreground, text);
     $divider: mc-color($foreground, divider);
