--- a/packages/mosaic/button/_button-theme.scss
+++ b/packages/mosaic/button/_button-theme.scss
@@ -47,7 +47,7 @@
         &:hover,
         &.mc-hover {
             & .mc-button-overlay {
-                background: map-get($background, overlay-hovered);
+                background: map-get($background, overlay-hover);
             }
         }
 
@@ -74,7 +74,7 @@
             &:hover,
             &.mc-hover {
                 & .mc-button-overlay {
-                    background: map-get($background, overlay-hovered);
+                    background: map-get($background, overlay-hover);
                 }
             }
 
