--- a/packages/mosaic/list/_list-theme.scss
+++ b/packages/mosaic/list/_list-theme.scss
@@ -14,7 +14,7 @@
         outline: none;
 
         &:hover {
-            background: map-get($background, overlay-hovered);
+            background: map-get($background, overlay-hover);
         }
 
         &.mc-focused {
