--- a/packages/mosaic/tags/_tag-theme.scss
+++ b/packages/mosaic/tags/_tag-theme.scss
@@ -66,7 +66,7 @@
         &:hover,
         &.mc-hovered {
             & .mc-tag-overlay {
-                background: map-get($background, overlay-hovered);
+                background: map-get($background, overlay-hover);
             }
         }
 
