--- a/packages/mosaic/core/theming/_theming.scss
+++ b/packages/mosaic/core/theming/_theming.scss
@@ -32,27 +32,31 @@
 
 @function mc-light-theme($primary, $second, $error, $info, $success, $warning) {
     $states: (
-        focused-color: $light-color-states-focused-color,
-        selected-color: $light-color-states-selected-color,
-        pressed-shadow: $light-color-states-pressed-shadow,
-        disabled-opacity: $light-color-states-disabled-opacity
+        focused-color: getCSSVar($light-color-states-focused-color: $light-color-states-focused-color),
+        selected-color: getCSSVar($light-color-states-selected-color: $light-color-states-selected-color),
+        pressed-shadow: getCSSVar($light-color-states-pressed-shadow: $light-color-states-pressed-shadow),
+        disabled-opacity: getCSSVar($light-color-states-disabled-opacity: $light-color-states-disabled-opacity)
     );
 
     $foreground: (
-        text:                       $light-color-foreground-text,
-        text-less-contrast:         $light-color-foreground-text-less-contrast,
-        text-disabled:              $light-color-foreground-text_disabled,
-        divider:                    $light-color-foreground-divider,
-        border:                     $light-color-foreground-border,
-        icon:                       $light-color-foreground-icon,
+        text: getCSSVar($light-color-foreground-text: $light-color-foreground-text),
+        text-less-contrast: getCSSVar(
+            $light-color-foreground-text-less-contrast: $light-color-foreground-text-less-contrast
+        ),
+        text-disabled: getCSSVar($light-color-foreground-text_disabled: $light-color-foreground-text_disabled),
+        divider: getCSSVar($light-color-foreground-divider: $light-color-foreground-divider),
+        border: getCSSVar($light-color-foreground-border: $light-color-foreground-border),
+        icon: getCSSVar($light-color-foreground-icon: $light-color-foreground-icon),
     );
 
     $background: (
-        background:                 $light-color-background-background,
-        background-disabled:        $light-color-background-background-disabled,
-        overlay-hover:            $light-color-background-overlay-hover,
-        overlay-active:             $light-color-background-overlay-active,
-        overlay-disabled:           $light-color-background-overlay-disabled
+        background: getCSSVar($light-color-background-background: $light-color-background-background),
+        background-disabled: getCSSVar(
+            $light-color-background-background-disabled: $light-color-background-background-disabled
+        ),
+        overlay-hover: getCSSVar($light-color-background-overlay-hover: $light-color-background-overlay-hover),
+        overlay-active: getCSSVar($light-color-background-overlay-active: $light-color-background-overlay-active),
+        overlay-disabled: getCSSVar($light-color-background-overlay-disabled: $light-color-background-overlay-disabled)
     );
 
     $theme: (
@@ -77,27 +81,31 @@
 
 @function mc-dark-theme($primary, $second, $error, $info, $success, $warning) {
     $states: (
-        focused-color: $dark-color-states-focused-color,
-        selected-color: $dark-color-states-focused-color,
-        pressed-shadow: $dark-color-states-pressed-shadow,
-        disabled-opacity: $dark-color-states-disabled-opacity
+        focused-color: getCSSVar($dark-color-states-focused-color: $dark-color-states-focused-color),
+        selected-color: getCSSVar($dark-color-states-focused-color: $dark-color-states-focused-color),
+        pressed-shadow: getCSSVar($dark-color-states-pressed-shadow: $dark-color-states-pressed-shadow),
+        disabled-opacity: getCSSVar($dark-color-states-disabled-opacity: $dark-color-states-disabled-opacity)
     );
 
     $background: (
-        background:                 $dark-color-background-background,
-        background-disabled:        $dark-color-background-background-disabled,
-        overlay-hover:              $dark-color-background-overlay-hover,
-        overlay-active:             $dark-color-background-overlay-active,
-        overlay-disabled:           $dark-color-background-overlay-disabled
+        background: getCSSVar($dark-color-background-background: $dark-color-background-background),
+        background-disabled: getCSSVar(
+            $dark-color-background-background-disabled: $dark-color-background-background-disabled
+        ),
+        overlay-hover: getCSSVar($dark-color-background-overlay-hover: $dark-color-background-overlay-hover),
+        overlay-active: getCSSVar($dark-color-background-overlay-active: $dark-color-background-overlay-active),
+        overlay-disabled: getCSSVar($dark-color-background-overlay-disabled: $dark-color-background-overlay-disabled)
     );
 
     $foreground: (
-        text:                       $dark-color-foreground-text,
-        text-less-contrast:         $dark-color-foreground-text-less-contrast,
-        text-disabled:              $dark-color-foreground-text_disabled,
-        divider:                    $dark-color-foreground-divider,
-        border:                     $dark-color-foreground-border,
-        icon:                       $dark-color-foreground-icon,
+        text: getCSSVar($dark-color-foreground-text: $dark-color-foreground-text),
+        text-less-contrast: getCSSVar(
+            $dark-color-foreground-text-less-contrast: $dark-color-foreground-text-less-contrast
+        ),
+        text-disabled: getCSSVar($dark-color-foreground-text_disabled: $dark-color-foreground-text_disabled),
+        divider: getCSSVar($dark-color-foreground-divider: $dark-color-foreground-divider),
+        border: getCSSVar($dark-color-foreground-border: $dark-color-foreground-border),
+        icon: getCSSVar($dark-color-foreground-icon: $dark-color-foreground-icon),
     );
 
     $theme: (
